--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       margin-bottom: 8px;
     }
     #searchInput {
-      font-size: 1.5rem;
-      padding: 10px;
+      font-size: 1.2rem;
+      padding: 3px;
       width: 300px;
     }
     #searchButton, #clearButton {
-      font-size: 1.5rem;
-      padding: 10px 16px;
+      font-size: 1.2rem;
+      padding: 3x 5px;
       background-color: #1976d2;
       color: white;
       border: none;
