--- a/index.html
+++ b/index.html
@@ -56,20 +56,25 @@
     }
     #searchWrapper {
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 8px;
+      flex-direction: column;
+      align-items: center;
       position: relative;
+      gap: 8px;
       margin-bottom: 8px;
     }
+    #searchControls {
+      display: flex;
+      gap: 8px;
+      position: relative;
+    }
     #searchInput {
-      font-size: 1.2rem;
-      padding: 3px;
+      font-size: 1.5rem;
+      padding: 10px;
       width: 300px;
     }
     #searchButton, #clearButton {
-      font-size: 1.2rem;
-      padding: 3x 5px;
+      font-size: 1.5rem;
+      padding: 10px 16px;
       background-color: #1976d2;
       color: white;
       border: none;
@@ -80,6 +85,7 @@
       position: absolute;
       top: 100%;
       left: 0;
+      transform: translateY(4px);
       background: #fff;
       border: 1px solid #ccc;
       max-height: 200px;
@@ -151,10 +157,12 @@
   </div>
   <div id="mapSection">
     <div id="searchWrapper">
-      <input type="text" id="searchInput" placeholder="BOXを検索">
-      <button id="searchButton">検索</button>
-      <button id="clearButton" onclick="clearMarkers()">マーカークリア</button>
-      <div id="searchResults"></div>
+      <div id="searchControls">
+        <input type="text" id="searchInput" placeholder="BOXを検索">
+        <button id="searchButton">検索</button>
+        <button id="clearButton" onclick="clearMarkers()">マーカークリア</button>
+        <div id="searchResults"></div>
+      </div>
     </div>
     <div id="map"></div>
   </div>
