--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       position: relative;
       height: 60px;
       background-color: #fff;
+      margin-bottom: 20px;
     }
     #pageTitle {
       position: absolute;
@@ -68,13 +69,13 @@
       position: relative;
     }
     #searchInput {
-      font-size: 1.0rem;
-      padding: 3px;
+      font-size: 1.1rem;
+      padding: 4px;
       width: 300px;
     }
     #searchButton, #clearButton {
-      font-size: 1.0rem;
-      padding: 3px 5px;
+      font-size: 1.1rem;
+      padding: 4px 6px;
       background-color: #1976d2;
       color: white;
       border: none;
