--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
   </div>
   <div id="mapSection">
     <div id="searchWrapper">
-      <div id="searchControls">
+      <div id="searchControls">📍
         <input type="text" id="searchInput" placeholder="BOXを検索">
         <button id="searchButton">検索</button>
-        <button id="clearButton" onclick="clearMarkers()">マーカークリア</button>
+        <button id="clearButton" onclick="clearMarkers()">📍全クリア</button>
         <div id="searchResults"></div>
       </div>
     </div>
     <div id="map"></div>
   </div>
   <div id="areaInfo">地図上のピンか吹き出しをタップすると情報が表示されます。</div>
-  <div id="centerCrosshair"></div>
+  <div id="centerCrosshair"></div> <!--センターに十字線をつける-->
 
   <script type="module">
 
@@ -274,6 +274,7 @@
           searchResults.style.display = "none";
           document.getElementById("searchInput").value = m.name;
           document.getElementById("searchInput").blur(); //←フォーカスを外す
+          showCrosshair(); // ← 画面中央に十字線追加
           logEvent(analytics, 'search_used');
         });
         searchResults.appendChild(item);
@@ -286,15 +287,19 @@
       displayedMarkers.length = 0;
     };
     //赤い十字線を表示する機能
-    function showCrosshair() {  
-      const crosshair = document.getElementById("centerCrosshair");
-      crosshair.style.display = "block";
-      const remove = () => {
-        crosshair.style.display = "none";
-      };
-      map.addListener("dragstart", remove);
-      map.addListener("zoom_changed", remove);
-    }
+    function showCrosshair() {
+        const crosshair = document.getElementById("centerCrosshair");
+        crosshair.style.display = "block";
+            // 地図が動いたら消す
+        const removeOnMove = () => {
+          crosshair.style.display = "none";
+          google.maps.event.removeListener(dragListener);
+          google.maps.event.removeListener(zoomListener);
+        };
+
+        const dragListener = map.addListener("dragstart", removeOnMove);
+        const zoomListener = map.addListener("zoom_changed", removeOnMove);
+      }
     //FireStoreからデータを読み込んで検索用データを準備する動作。全情報がMarkerDataに保存されている。
     function loadGoogleMaps() { //GoogleAPIを読み込んで初期化
       const script = document.createElement("script");
