--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           scaledSize: new google.maps.Size(24, 24)
         },
         labelContent: `<div>${m.organization} ${m.number}<br>${m.name}</div>`,
-        labelAnchor: new google.maps.Point(0, 0),
+        labelAnchor: new google.maps.Point(12, -36), //マーカーラベルの位置変更
         labelClass: "marker-label",
         labelStyle: { opacity: 0.85 },
         labelInBackground: false,
