--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Box全体MAP</title>
+  <title>Box検索MAP</title>
   <style>
     #map { height: 80vh; width: 100%; }
     #loginSection, #mapSection { display: none; }
@@ -221,7 +221,7 @@
           scaledSize: new google.maps.Size(24, 24)
         },
         labelContent: `<div>${m.organization} ${m.number}<br>${m.name}</div>`,
-        labelAnchor: new google.maps.Point(0, -48), //マーカーラベルの位置変更
+        labelAnchor: new google.maps.Point(0, -60), //マーカーラベルの位置変更
         labelClass: "marker-label",
         labelStyle: { opacity: 0.85 },
         labelInBackground: false,
