--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.2);
       white-space: normal;
       text-align: center;
+      max-width: 200px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     #areaInfo {
       display: none;
