--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
       border-radius: 4px;
       font-size: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-      white-space: normal;
+      white-space: nowrap;
       text-align: center;
-      max-width: 200px;
+      max-width: 150px;
       overflow: hidden;
       text-overflow: ellipsis;
     }
