--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       transform: translateY(-50%);
       font-size: 1rem;
       padding: 4px 8px;
-      background-color: #1976d2;
-      color: white;
+      background-color: #f7e1cf;
+      color: black;
       border: none;
       border-radius: 4px;
       cursor: pointer;
@@ -170,7 +170,7 @@
   </div>
   <div id="header">
     <h2 id="pageTitle">検索すると📍マーカーが表示されていきます。</h2>
-    <button id="navButton" onclick="location.href='allbox.html'">📄 別ページへ</button>
+    <button id="navButton" onclick="location.href='allbox.html'">📄 全map表示へ</button>
     <button onclick="logout()" id="logoutButton">ログアウト</button>
   </div>
   <div id="mapSection">
